# project

./: .gitignore  LICENSE  Makefile  README.md  README.rst  pyproject.toml
core/: manage.py
core/core/utils/: collections.py  misc.py
core/project/: settings.py
core/project/settings/: __init__.py  base.py  docker.py  envvars.py
core/project/settings/templates/: settings.dev.py
django_boilerplate/: Makefile
django_boilerplate/project/: settings.py
